# AI-Based-Deleted-Data-Recovery-From-Storage

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  PRD.md  README.md  USER_GUIDE.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/: 03-CONTEXT.md  04-CONTEXT.md  05-CONTEXT.md  PHASE_1_VERIFICATION.md  PHASE_3_VERIFICATION.md  PHASE_4_VERIFICATION.md
.planning/research/: PHASE_1_RESEARCH.md  PHASE_2_RESEARCH.md
AI_Deleted_Data_Recovery/: main.py
AI_Deleted_Data_Recovery/models/: __init__.py
carving/: __init__.py  fat32.py  hybrid.py  ntfs.py  signature.py
dataset/: __init__.py  fragmenter.py  loader.py  noise.py
docs/: api_reference.rst  conf.py  index.rst  user_guide.md
models/: __init__.py  autoencoder.py  classifier.py
reconstruction/: denoise.py  enhancement.py  grouping.py  repair.py
scripts/: evaluate_models.py  generate_dummy_data.py  test_denoising_integration.py  test_hybrid_carver.py  train_autoencoder.py  train_classifier.py
storage_scan/: __init__.py  scanner.py
tests/: conftest.py  test_autoencoder.py  test_carver.py  test_classifier.py  test_e2e_recovery.py  test_fragmenter.py  test_grouping.py  test_integrated_pipeline.py  test_loader.py  test_metadata.py  test_models.py  test_noise.py  test_reconstruction.py  test_repair.py  test_scanner.py  test_utils.py  test_validation.py
ui/: __init__.py  app.py  state.py
ui/components/: hex_viewer.py  (+1 more)
utils/: metadata.py  reporting.py  training.py  validation.py
(+36 files in other folders)
