[project]
name = "ai-deleted-data-recovery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pytest>=9.0.2",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]
