[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-deleted-data-recovery"
version = "0.1.0"
description = "AI-powered deleted data recovery system"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "scikit-image>=0.26.0",
    "scikit-learn>=1.8.0",
    "setuptools>=82.0.0",
    "streamlit>=1.54.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
]

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
